Set up Realm DB and add notes feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">NotesApp</string>
     <string name="main"> Create your first note</string>
     <string name="Create">Create a Note</string>
+    <string name="AllNotes">All Notes</string>
     <string name="notely">Notely</string>
+    <string name="Title">Title</string>
+    <string name="Words">Type in what you want</string>
     <string name="home_text">Add a note about anything (your thoughts on climate change, or your history essay) and share it witht the world.</string>
 </resources>
